--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,7 @@ h1 {
 .location {
   width: 100%;
   text-align: center;
-  padding: 20px 0 0 0;
+  padding: 100px 0 0 0;
 }
 
 .currently {
@@ -69,7 +69,7 @@ h1 {
 .weather_current {
   width: 100%;
 
-  padding: 40px 0 0 0;
+  padding: 60px 0 0 0;
 }
 
 .icon_main_container {
@@ -85,11 +85,14 @@ h1 {
   margin-top: -20px;
 }
 
+.description:first-letter {
+  text-transform: capitalize;
+}
+
 .description {
   font-size: 32px;
   font-weight: 300;
   padding: 0 10px;
-  text-transform: capitalize;
 }
 
 .wind {
@@ -107,7 +110,7 @@ h1 {
 .weekly {
   width: 100%;
   text-align: center;
-  padding: 20px 0 0 0;
+  padding: 40px 0 0 0;
 }
 
 .weather_forecast {
@@ -136,7 +139,7 @@ h1 {
 
 .search_bar {
   width: 50%;
-  padding-top: 50px;
+  padding-top: 70px;
   display: block;
   margin: 0 auto;
 }
