--- a/src/style.css
+++ b/src/style.css
@@ -184,6 +184,11 @@ h1 {
   color: white;
 }
 
+.form-control:focus {
+  border-color: white;
+  box-shadow: 0 0 0 0.25rem rgb(255 255 255 / 25%);
+}
+
 .form-control::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: white;
