--- a/src/style.css
+++ b/src/style.css
@@ -244,6 +244,8 @@ h1 {
 .btn-outline-primary.dropdown-toggle.show:focus,
 .btn-outline-primary:active:focus {
   box-shadow: 0 0 0 0.25rem rgb(255 255 255 / 50%);
+  border-color: white;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .btn {
@@ -271,4 +273,11 @@ h1 {
 
 .open-source {
   text-align: center;
+}
+
+btn-check:focus + .btn-outline-primary,
+.btn-outline-primary:focus {
+  box-shadow: 0 0 0 0.25rem rgb(225 225 225 / 50%);
+  background-color: rgba(255, 255, 255, 0.2);
+  border-color: white;
 }
