--- a/src/style.css
+++ b/src/style.css
@@ -115,7 +115,7 @@ h1 {
 
 .weather_forecast {
   padding-top: 30px;
-  width: 70%;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -123,7 +123,8 @@ h1 {
   font-size: 16px;
 }
 
-.wind_forecast {
+.wind_forecast,
+.temp-forecast {
   font-size: 12px;
   width: 100%;
 }
