--- a/src/style.css
+++ b/src/style.css
@@ -67,14 +67,12 @@ h1 {
 }
 
 .weather_current {
-  width: 100%;
-
   padding: 60px 0 0 0;
 }
 
 .icon_main_container {
   text-align: right;
-  padding-top: 30px;
+  padding-right: 40px;
 }
 
 .temp {
@@ -115,7 +113,7 @@ h1 {
 
 .weather_forecast {
   padding-top: 30px;
-  width: 80%;
+  width: 75%;
   margin: 0 auto;
 }
 
@@ -125,7 +123,7 @@ h1 {
 
 .wind_forecast,
 .temp-forecast {
-  font-size: 12px;
+  font-size: 11px;
   width: 100%;
 }
 .weather_forecast .col-2 {
@@ -139,8 +137,8 @@ h1 {
 }
 
 .search_bar {
-  width: 50%;
-  padding-top: 70px;
+  width: 60%;
+  padding-top: 50px;
   display: block;
   margin: 0 auto;
 }
